# FABDL

./: .gitignore  CLAUDE.md  Makefile  PROJECT.md  README.md  SOUL.md
architecture/: AGENT-WORKFLOWS.md  SERVICE-CONTRACTS.md  SYSTEM-DESIGN.md  WALLET-INTEGRATION.md
backend/: README.md  api.py  requirements.txt
bedrock/: Cargo.toml  DEBUG_CONTEXT.md  Makefile  SMART-CONTRACT.md  abi-manager.json  abi-set-manager.json  abi.json  abi.json.bak  abi.json.empty  abi.json.full  abi.json.test1  abi.json.withparams  advance-ledger.sh  bedrock.toml  bedrock.toml.bak  contract_details.txt  demo.sh  test-call.js  uniswap_v3_xrpl_contract_skeleton.rs  uniswap_v3_xrpl_execution_adapter.rs  uniswap_v3_xrpl_tests.rs
bedrock/adapter/: Cargo.toml
bedrock/contract/: Cargo.toml
bedrock/contract-manager/: Cargo.toml
bedrock/contract-manager/src/: lib.rs
bedrock/contract/.cargo/: config.toml
bedrock/contract/contract/: Cargo.toml
bedrock/contract/contract/contract/contract/src/: types.rs
bedrock/contract/contract/contract/contract/tests/: e2e.rs
bedrock/contract/contract/contract/src/: hooks.rs  oracle.rs  position.rs  swap.rs
bedrock/contract/src/: codec.rs  hooks.rs  lib.rs  math.rs  position.rs  swap.rs  tick.rs  tick_bitmap.rs  types.rs
bedrock/contract/tests/: e2e.rs
bedrock/docs/: IMPLEMENTATION.md  SPEC.md  bedrock.md  uniswap_v3.md  uniswap_v3_xrpl_core_modules.md  uniswap_v3_xrpl_execution_adapter.md  uniswap_v3_xrpl_phase0_decision.md  uniswap_v3_xrpl_protocol_spec.md  uniswap_v3_xrpl_rollout_safety.md  uniswap_v3_xrpl_test_benchmark_plan.md
bedrock/xrpl-wasm-macros-stub/: Cargo.toml
bedrock/xrpl-wasm-std-stub/: Cargo.toml
docs/: epfl_blockchain_project.md
fin-analysis-backend/: Cargo.toml  DECISIONING.md  LP_FORMULAS.md
fin-analysis-backend/src/: error.rs  lib.rs  main.rs
fin-analysis-backend/src/pipeline/: analyze_risk.rs  check_position.rs  mod.rs  router.rs
fin-analysis-backend/src/pipeline/tests/: mod.rs
fin-analysis-backend/src/quant/: breakeven.rs  delta.rs  fees.rs  il.rs  math.rs  mod.rs  replay.rs  sharpe.rs  var.rs
fin-analysis-backend/src/quant/math/tests/: mod.rs
fin-analysis-backend/src/quant/tests/: mod.rs
fin-analysis-backend/src/server/: handlers.rs  mod.rs
fin-analysis-backend/src/server/tests/: mod.rs
fin-analysis-backend/src/types/: intent.rs  mod.rs  pool.rs  quant.rs  xrpl.rs
fin-analysis-backend/src/types/tests/: mod.rs
fin-analysis-backend/src/xrpl/: account.rs  amm.rs  client.rs  mod.rs  price_feed.rs
fin-analysis-backend/src/xrpl/tests/: mod.rs
fin-analysis-py/: .env.example  .gitignore  README.md  pyproject.toml
fin-analysis-py/src/fabdl/: __init__.py  cli.py
fin-analysis-py/src/fabdl/core/: constants.py  events.py  fixed_point.py  sqrtmath.py  swapmath.py  tickmath.py
fin-analysis-py/src/fabdl/extract/: liquidity_snapshots.py  mints_burns.py  slot0.py  swaps.py
fin-analysis-py/src/fabdl/io/: block_index.py  logs.py  parquet.py  rpc.py
fin-analysis-py/src/fabdl/liquidity/: concentration.py  profile.py
fin-analysis-py/src/fabdl/lp/: analytics.py  fees.py  il.py  position.py
fin-analysis-py/src/fabdl/simulate/: state.py  swap.py
fin-analysis-py/tests/unit/: test_extract_swaps.py  test_fixed_point.py  test_liquidity_profile.py  test_liquidity_snapshots.py  test_logs.py  test_lp_analytics.py  test_lp_fees.py  test_lp_il.py  test_lp_position.py  test_rpc.py  test_simulate_swap.py  test_sqrtmath.py  test_swapmath.py  test_tickmath.py
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: KeyEntryModal.tsx  PnLChart.tsx  TransactionSuccessModal.tsx  confirm-transaction-modal.tsx  execution-status.tsx  header.tsx  query-input.tsx  risk-indicator.tsx  strategy-card.tsx  strategy-details-modal.tsx  strategy-grid.tsx  wallet-connect.tsx
frontend/contexts/: PoolRegistryContext.tsx  VaultRegistryContext.tsx
frontend/hooks/: useTradingAssistant.ts  useWallet.ts
frontend/lib/: otsu-wallet.ts  types.ts  wallet-context.tsx  wallet-providers.ts  window.d.ts
frontend/services/: ammDiscovery.ts  api.ts  poolRegistry.ts  vaultRegistry.ts  xrplTransactions.ts
llm-orchestration/: Makefile  PROMPTS.md  README.md  SETUP_GUIDE.md  interactive_client.py  query.py  results.txt
mcp-server/: AGENT-GUIDE.md  README.md  requirements.txt  server.py
quant/: RISK-MODELS.md
references/: BEDROCK.md  README-old.md  XRPL-AMM.md
scripts/: smoke_test.sh
(+19 files in other folders)
