[package]
name = "fin-analysis-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fin-analysis-backend"
path = "src/main.rs"

[lib]
name = "fin_analysis_backend"
path = "src/lib.rs"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
axum         = { version = "0.7",  features = ["json"] }
tower-http   = { version = "0.5",  features = ["trace"] }
reqwest      = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
anyhow       = "1"
async-trait  = "0.1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test  = "14"
tokio      = { version = "1", features = ["test-util"] }
approx     = "0.5"
