[project]
name = "fabdl"
version = "0.1.0"
description = "EPFL FABDL — Uniswap V3 USDC/WETH 0.05% pool analytics"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "web3>=6.15,<7",
    "aiohttp>=3.9",
    "requests>=2.31",
    "eth-abi>=5.0",
    "eth-utils>=4.0",
    "pyarrow>=15",
    "polars>=0.20",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-recording>=0.13",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]
viz = ["plotly>=5.20"]

[project.scripts]
fabdl = "fabdl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fabdl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Enforce the correctness rule: no float / numpy inside core swap math
"src/fabdl/core/swapmath.py" = []
"src/fabdl/core/sqrtmath.py" = []
"src/fabdl/core/tickmath.py" = []
"src/fabdl/core/fixed_point.py" = []

[tool.mypy]
python_version = "3.11"
strict = true
