[package]
name = "uniswap-v3-xrpl-manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xrpl-wasm-macros = { path = "../xrpl-wasm-macros-stub" }
xrpl-wasm-std    = { path = "../xrpl-wasm-std-stub" }

# Pool contract — used for direct in-process calls in native tests only.
# On WASM this dependency is unused; calls go via bedrock_invoke host function.
uniswap-v3-xrpl-contract = { path = "../contract" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
