[package]
name = "uniswap-v3-xrpl-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# WASM-only: Bedrock host bindings (not needed for native test builds)
[target.'cfg(target_arch = "wasm32")'.dependencies]
xrpl-wasm-macros = { git = "https://github.com/xrpl-commons/xrpl-wasm" }
xrpl-wasm-std    = { git = "https://github.com/xrpl-commons/xrpl-wasm" }

[dev-dependencies]

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
