[package]
name = "uniswap-v3-xrpl-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# On native: stubs provide in-memory state + typed function signatures for tests.
# On wasm32 (bedrock build): stubs wire directly to host_lib imports and generate
# the correct no-arg exported functions per the Bedrock calling convention.
xrpl-wasm-macros = { path = "../xrpl-wasm-macros-stub" }
xrpl-wasm-std    = { path = "../xrpl-wasm-std-stub" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
